--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,43 @@
   }
 }
 
+body {  
+    width: 480px; 
+    height: 450px; 
+    margin: 0 auto; 
+} 
+h2 { 
+    color: green;  
+    text-align: center;   
+    letter-spacing: -2px;   
+} 
+
+.listItemClass { 
+    color: #858585; 
+    font-size: 21px; 
+    padding: 0; 
+    width: 500px; 
+    border: 2px solid #cecece; 
+} 
+.listItemClass li { 
+    list-style: none; 
+    border-bottom: 2px dotted #cecece; 
+    text-indent: 20px; 
+    height: auto;  
+    padding: 10px; 
+} 
+.listItemClass li:hover { 
+    background-color: #f5f5f5; 
+} 
+.verticalLines {  
+    width: 1px; 
+    float: left; 
+    height: 425px; 
+    margin-left: 35px; 
+    border-left: 1px solid green; 
+    border-right: 1px solid green; 
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
